# momento-cli

./: .generated-go-semantic-release-changelog.md  .gitignore  .gitmodules  CONTRIBUTING.ja.md  CONTRIBUTING.md  CONTRIBUTING.pt.md  Cargo.toml  Cross.toml  Makefile  README.ja.md  README.md  README.pt.md  nfpm.template.yaml  run_test_sequentially.sh  set_cargo_version.sh  update_cargo.toml.py  update_cargo_toml.py
.github/workflows/: asset-test.yml  cd.yml  cert-test-workflow.yml  ci.yml  execute-release.yml  homebrew-formula-update-experiment.yml  m1-release-trial.yml  manual-release-trial.yml  manual-release.yml  merge.yml  on-pull-request.yml  on-push-to-main-branch.yml  on-push-to-main.yml  on-push-to-release.yml  publish.yml  rust.yml  test.yml
config/: example_config
momento/: Cargo.toml  build.rs
momento-cli-opts/: Cargo.toml
momento-cli-opts/src/: lib.rs  utils.rs
momento/src/: config.rs  main.rs
momento/src/commands/: account.rs  login.rs  mod.rs
momento/src/commands/cache/: cache_cli.rs
momento/src/commands/cloud_linter/: api_gateway.rs  dynamodb.rs  elasticache.rs  lambda.rs  linter_cli.rs  metrics.rs  mod.rs  resource.rs  s3.rs  serverless_elasticache.rs  utils.rs
momento/src/commands/configure/: configure_cli.rs  mod.rs
momento/src/commands/functions/: function_cli.rs  mod.rs  utils.rs
momento/src/commands/signingkey/: mod.rs
momento/src/commands/tokens/: mod.rs
momento/src/commands/topic/: mod.rs
momento/src/error/: mod.rs
momento/src/utils/: client.rs  console.rs  file.rs  ini_config.rs  messages.rs  mod.rs  user.rs
momento/tests/: momento_additional_profile_test.rs  momento_default_profile_test.rs
momento/tests/common/: mod.rs
scripts/: install_protoc.sh  install_protoc_linux.sh  install_protoc_osx.sh  install_protoc_windows.sh
src/: commands.rs  config.rs  credentials.rs  main.rs  utils.rs
src/commands/: account.rs  login.rs  mod.rs  version.rs
src/commands/cache/: cache.rs  cache_cli.rs  mod.rs
src/commands/configure/: configure.rs  configure_cli.rs
src/commands/signingkey/: signingkey_cli.rs
src/commands/signup/: mod.rs  signup.rs
src/commands/topic/: mod.rs
src/utils/: client.rs  console.rs  file.rs  ini_config.rs  mod.rs  user.rs
tests/: configure_profiles_test.rs  create_cache_test.rs  delete_cache_test.rs  get_test.rs  list_cache_test.rs  momento_additional_profile.rs  momento_additional_profile_test.rs  momento_default_profile.rs  set_test.rs
tests/common/: mod.rs
windows/installer/: MomentoCLI.wixproj  Product.wxs
windows/installer/Resources/: license.rtf
windows/winget/manifests/m/Momento/Momento/0.26.3.0/: Momento.Momento.installer.yaml  Momento.Momento.locale.en-US.yaml  Momento.Momento.yaml
windows/winget/manifests/m/Momento/cli/0.26.3.0/: Momento.cli.installer.yaml  Momento.cli.locale.en-US.yaml  Momento.cli.yaml
