[package]
name = "momento-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3.22"
log = { version = "^0.4.14" }
env_logger = { version = "^0.9.0" }
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
tokio = { version = "1", features = ["full"] }
home = "0.5.3"
toml = "0.5.8"
serde = {version = "1.0", features = ["derive"] }
maplit = "1.0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
momento = { path = "./client-sdk-rust" }

[dev-dependencies]
assert_cmd = "2.0.2"

[[bin]]
name = "momento"
path = "src/main.rs"
