[[bin]]
name = "momento"
path = "src/main.rs"

[package]
name = "momento-cli"
version = "0.23.9"
edition = "2021"

[features]
default = []
login = []

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
home = "0.5.3"
toml = "0.5.8"
maplit = "1.0.2"
configparser = "3.0.0"
regex = "1"
momento = "0.7.2"
qrcode = "0.12.0"
webbrowser = "0.7.1"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.1"

[dependencies.clap]
version = "3.0.10"
features = [ "derive",]

[dependencies.log]
version = "^0.4.14"

[dependencies.env_logger]
version = "^0.9.0"

[dependencies.tracing-subscriber]
version = "0.2.16"
features = [ "fmt",]

[dependencies.tokio]
version = "1"
features = [ "full",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.serde_json]
version = "1.0.79"

[dependencies.reqwest]
version = "0.11"
features = [ "json", "rustls-tls",]
default-features = false
