[[bin]]
name = "momento"
path = "src/main.rs"

[package]
name = "momento-cli"
version = "0.27.1"
edition = "2021"

[features]
default = []
login = []

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
home = "0.5.3"
toml = "^0.6.0"
configparser = "3.0.0"
regex = "1"
momento = { version = "0.21" }
qrcode = "0.12.0"
webbrowser = "^0.8.4"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.1"
uuid = { version = "1.2.2", features = ["v4"] }
tempdir = "0.3.7"

[dependencies.clap]
version = "4.1"
features = [ "derive",]

[dependencies.log]
version = "^0.4.14"

[dependencies.env_logger]
version = "^0.10.0"

[dependencies.tracing-subscriber]
version = "^0.3.16"
features = [ "fmt",]

[dependencies.tokio]
version = "1"
features = [ "full",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.serde_json]
version = "1.0.79"

[dependencies.reqwest]
version = "0.11"
features = [ "json", "rustls-tls",]
default-features = false
