[[bin]]
name = "momento"
path = "src/main.rs"

[package]
name = "momento-cli"
version = "0.38.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
home = "0.5.3"
toml = "^0.6.0"
lazy_static = "1.4.0"
configparser = "3.0.0"
regex = "1"
qrcode = "0.12.0"
webbrowser = "^0.8.4"
humantime = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.1"
tempdir = "0.3.7"

[dependencies.momento-cli-opts]
path = "../momento-cli-opts"

[dependencies.momento]
version = "0.26.2"

[dependencies.clap]
version = "4.1"
features = [ "derive",]

[dependencies.log]
version = "^0.4.14"

[dependencies.env_logger]
version = "^0.10.0"

[dependencies.tracing-subscriber]
version = "^0.3.16"
features = [ "fmt",]

[dependencies.tokio]
version = "1"
features = [ "full",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.serde_json]
version = "1.0.79"

[dependencies.reqwest]
version = "0.11"
features = [ "json", "rustls-tls",]
default-features = false

[dev-dependencies.uuid]
version = "1.2.2"
features = [ "v4",]

[build-dependencies.momento-cli-opts]
path = "../momento-cli-opts"

[build-dependencies.clap_complete]
version = "4.1"
